2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Fixed the edition
	of an user after a fail creation for bug: 3017524

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* operation/users/user.php
	godmode/users/user_list.php: Changed the order
	of the users to id_user

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Fixed the ACL
	permissions for bug: 3017262 

2010-06-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed the colspan
	into the Custom Graph report item for bug: 3013859

2010-06-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.php: Fixed the 
	period of graph for bug #3014781, the creation 
	of combined graphs before store the graph for bug
	#3014796 and the message over the header for bug #3014798

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: fixed lost semi colon.
	
	* godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed lost include
	autocomplete javascript file.
	
	Fixes: #3013425

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_pt_BR.html,
	  general/license/pandora_info_es.html,
	  general/license/pandora_info_ast.html: Added to repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/license/pandora_info_ast_es.html,
	  general/license/pandora_info_es_es.html,
	  general/license/pandora_info_es_la.html,
	  general/license/pandora_info_pt_br.html: Removed from repository.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* general/footer.php: Show the English license if a localized version
	  is not available.

2010-06-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_manager.php: Fixed the agent icons on 
	agent setup for bug: 3013426

2010-06-09  Junichi Satoh  <junichi@rworks.jp>
